# kodexa-cli

./: .gitignore  README.md  dev.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-and-release.yml  feature-build.yml  update-docs.yml
docs/: cli.md  index.md
docs/tutorials/: install.cast  installing.md  list-orgs.cast  list-projects.cast  listing-organizations.md  listing-projects.md  logging-in.cast  logging-in.md  working-with-stores.cast  working-with-stores.md
kodexa_cli/: __init__.py  cli.py  documentation.py
kodexa_cli/charts/extension-pack/: Chart.yaml  values.yaml
kodexa_cli/charts/extension-pack/templates/: NOTES.txt  _helpers.tpl  configmap.yaml
kodexa_cli/charts/model/: Chart.yaml  values.yaml
kodexa_cli/charts/model/resources/: extension.json
kodexa_cli/charts/model/templates/: NOTES.txt  configmap.yaml
kodexa_cli/charts/resource-container/: Dockerfile  health-check.conf
kodexa_cli/charts/resource-pack/: Chart.yaml  values.yaml
kodexa_cli/charts/resource-pack/templates/: _helpers.tpl  deployment.yaml  service.yaml
kodexa_cli/charts/resource-pack/templates/tests/: test-connection.yaml
kodexa_cli/templates/: action.jinja2  assistant.jinja2  content-taxon.jinja2  data-store.jinja2  document-store.jinja2  header.jinja2  index.jinja2  model-runtime.jinja2  model.jinja2  options.jinja2  processing-taxon.jinja2  taxon.jinja2  taxonomy-labels.jinja2  taxonomy-structure.jinja2  taxonomy.jinja2
tests/: test_cli.py
