[tool.poetry]
name = "kodexa-cli"
version = "6.0.33"
description = "Command Line Tools for Kodexa"
authors = ["Austin Redenbaugh <austin@kodexa.com>", "Philip Dodds <philip@kodexa.com>", "Romar Cablao <rcablao@kodexa.com>", "Amadea Paula Dodds <amadeapaula@kodexa.com>"]
readme = "README.md"
packages = [{include = "kodexa_cli"}]

[tool.poetry.scripts]
kodexa = 'kodexa_cli:cli'

[tool.poetry.dependencies]
python = "^3.9"
kodexa = "^6.0.116"
click = "8.1.3"
PyYAML = "^6.0"
rich = "13.0.1"
flake8 = "^6.0.0"
mypy = "^0.991"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mkdocs-click = "^0.8.0"
mkdocs-material = "^9.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
