[tool.poetry]
name = "kodexa-cli"
version = "6.3.0"
description = "Command Line Tools for Kodexa"
authors = ["Austin Redenbaugh <austin@kodexa.com>", "Philip Dodds <philip@kodexa.com>", "Romar Cablao <rcablao@kodexa.com>", "Amadea Paula Dodds <amadeapaula@kodexa.com>", "John Patrick Sese <jp@kodexa.com>"]
readme = "README.md"
packages = [{include = "kodexa_cli"}]

[tool.poetry.scripts]
kodexa = 'kodexa_cli:cli'

[tool.poetry.dependencies]
python = "^3.9"
kodexa = "^6.3.0"
click = "8.1.3"
PyYAML = "^6.0"
rich = "13.3.5"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pandas = "^2.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mkdocs-click = "^0.8.0"
mkdocs-material = "^9.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
