[tool.poetry]
name = "kodexa-cli"
version = "7.0.0"
description = "Command Line Tools for Kodexa"
authors = ["Austin Redenbaugh <austin@kodexa.com>", "Philip Dodds <philip@kodexa.com>", "Romar Cablao <rcablao@kodexa.com>", "Amadea Paula Dodds <amadeapaula@kodexa.com>", "John Patrick Sese <jp@kodexa.com>"]
readme = "README.md"
packages = [{include = "kodexa_cli"}]

[tool.poetry.scripts]
kodexa = 'kodexa_cli.cli:safe_entry_point'

[tool.poetry.dependencies]
python = "^3.10"
kodexa = "^7.0.0"
click = "^8.1.7"
PyYAML = "^6.0"
rich = "^13.7.0"
wrapt = "^1.15.0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mkdocs-click = "^0.8.0"
flake8 = "^6.0.0"
mypy = "^1.5.1"
pandas = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
